# raspberry_pi_localization

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
robot/: Cargo.toml
robot/src/: actions.rs  config.rs  main.rs  utils.rs
sensor_fusion/: Cargo.toml
sensor_fusion/src/: estimator.rs  lib.rs  model.rs  state.rs  track.rs
sensor_fusion/src/kalman/: estimator.rs  mod.rs  model.rs  track.rs
sensor_fusion/src/kalman2/: estimator.rs  model.rs
sensor_fusion/tests/: test_example.rs  utils.rs
sensors/: Cargo.toml
sensors/src/: compass.rs  coordinates.rs  distance_traveled.rs  gps.rs  lib.rs  motor.rs
src/: actions.rs  deciders.rs  lib.rs  main.rs  plotting.rs  robot.rs  sensor.rs  state.rs  user_input.rs  utils.rs
src/devices/: adafruit.rs  bno055.rs  mod.rs  paa5100.rs  ublox.rs
src/filter/: model.rs  track.rs
src/sensor/: gps.rs  logic.rs  mod.rs  velocity.rs
src/sensor_utils/: gps.rs  gps_utils.rs  mod.rs  velocity.rs
src/sensors/: adafruit.rs  bno055.rs  paa5100.rs  ublox.rs
tests/: actions.rs  robot.rs  state.rs  utils.rs
