[package]
name = "raspberry_pi_localization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
gilrs = "0.10.2"
i2cdev = "0.5.1"
log = "0.4.0"
simplelog = "0.12.1"
nmea = "0.5.0"
regex="1.9.1"
plotters="0.3.5"