[package]
name = "raspberry_pi_localization"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32"
gilrs = "0.10"
i2cdev = "0.6"
spidev = "0.6"
serialport="4.2"
log = "0.4"
simplelog = "0.12"
nmea = "0.6"
regex="1.9"
plotters="0.3"
base64 = "0.21"
crc = "3.0"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
bytes = "1.5"