[package]
name = "robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sensors = { path = "../sensors" }
sensor_fusion = { path = "../sensor_fusion" }

nalgebra = "0.32"
log = "0.4.21"
gilrs = "0.10"
toml = "0.8"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.12"