[package]
name = "sensors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev = "0.6"
spidev = "0.6"
serialport = "4.2"
nmea = "0.6"
bytes = "1.5"
tokio = { version = "1", features = ["full"] }
log = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3.28"
base64 = "0.22"
regex = "1.9"
nalgebra = "0.32"